--- a/src/allmydata/web/welcome.xhtml
+++ b/src/allmydata/web/welcome.xhtml
@@ -139,7 +139,7 @@
               <div class="span6">
                 <div>
                   <h3>
-                    <div class="status-indicator"><img><n:attr name="src">img/connected-<n:invisible n:render="string" n:data="connected_to_introducer" />.png</n:attr><n:attr name="alt"><n:invisible n:render="string" n:data="connected_to_introducer_alt" /></n:attr></img></div>
+                    <div class="status-indicator"><img><n:attr name="src">img/connected-<n:invisible n:render="string" n:data="connected_to_at_least_one_introducer" />.png</n:attr><n:attr name="alt"><n:invisible n:render="string" n:data="connected_to_at_least_one_introducer_alt" /></n:attr></img></div>
                     <div n:render="string" n:data="introducer_description" />
                   </h3>
                   <div class="furl" n:render="string" n:data="introducer_furl_prefix" />
@@ -161,14 +161,19 @@
             </div><!--/row-->
           </div>
           <div class="row-fluid">
-            <h2>Connected to <span n:render="string" n:data="connected_introducers" /> of <span n:render="string" n:data="total_introducers" /> introducers</h2>
+            <h2>Connected Introducer(s)</h2>
           </div>
           <div>
-          <table class="table table-striped table-bordered peer-status" n:render="sequence" n:data="introducers">
+          <table n:render="sequence" n:data="introducers">
+            <tr n:pattern="header">
+              <td>Introducer FURL</td>
+              <td>Connected?</td>
+            </tr>
             <tr n:pattern="item" n:render="introducers_row">
-              <td class="nickname-and-peerid">
-                <div><n:attr name="class">status-indicator connected-<n:slot name="connected"/></n:attr></div>
-                <div class="introducer_furl"><n:slot name="introducer_furl"/></div>
+              <td><tt><n:slot name="introducer_furl"/></tt></td>
+              <td>
+                <n:slot name="connected"/>
+                <n:attr name="class">service-connected connected-<n:slot name="connected-bool"/></n:attr>
               </td>
             </tr>
             <tr n:pattern="empty"><td>no introducers!</td></tr>
