--- a/src/allmydata/web/welcome.xhtml
+++ b/src/allmydata/web/welcome.xhtml
@@ -161,6 +161,20 @@
             </div><!--/row-->
           </div>
           <div class="row-fluid">
+            <h2>Connected to <span n:render="string" n:data="connected_introducers" /> of <span n:render="string" n:data="total_introducers" /> introducers</h2>
+          </div>
+          <div>
+          <table class="table table-striped table-bordered peer-status" n:render="sequence" n:data="introducers">
+            <tr n:pattern="item" n:render="introducers_row">
+              <td class="nickname-and-peerid">
+                <div><n:attr name="class">status-indicator connected-<n:slot name="connected"/></n:attr></div>
+                <div class="introducer_furl"><n:slot name="introducer_furl"/></div>
+              </td>
+            </tr>
+            <tr n:pattern="empty"><td>no introducers!</td></tr>
+          </table>
+          </div>
+          <div class="row-fluid">
             <h2>
               Connected to <span n:render="string" n:data="connected_storage_servers" />
               of <span n:render="string" n:data="known_storage_servers" /> known storage servers
