--- a/src/allmydata/web/welcome.xhtml
+++ b/src/allmydata/web/welcome.xhtml
@@ -168,6 +168,7 @@
           <table class="table table-striped table-bordered peer-status" n:render="sequence" n:data="services">
             <thead>
               <tr n:pattern="header">
+                <td><h3>Status</h3></td>
                 <td><h3>Nickname</h3></td>
                 <td><h3>Address</h3></td>
                 <td><h3>Last&nbsp;RX</h3></td>
@@ -176,6 +177,9 @@
               </tr>
             </thead>
             <tr n:pattern="item" n:render="service_row">
+              <td class="service-connection-status">
+              <div><n:attr name="class">status-indicator service-<n:slot name="service_connection_status"/></n:attr></div>
+<div class="status-description"><n:slot name="service_connection_status"/><br/><a class="timestamp"><n:attr name="title"><n:slot name="service_connection_status_abs_time"/></n:attr><n:slot name="service_connection_status_rel_time"/></a></div></td>
               <td class="nickname-and-peerid">
                 <div class="status-indicator"><img><n:attr name="src">img/connected-<n:slot name="service_connection_status" />.png</n:attr><n:attr name="alt"><n:slot name="service_connection_status_alt" /></n:attr></img></div>
                 <a class="timestamp"><n:attr name="title"><n:slot name="service_connection_status_abs_time"/></n:attr><n:slot name="service_connection_status_rel_time"/></a>
@@ -187,7 +191,7 @@
               <td class="service-version"><n:slot name="version"/></td>
               <td class="service-available-space"><n:slot name="available_space"/></td>
             </tr>
-            <tr n:pattern="empty"><td colspan="5">You are not presently connected to any peers</td></tr>
+            <tr n:pattern="empty"><td colspan="6">You are not presently connected to any peers</td></tr>
           </table>
         </div><!--/span-->
       </div><!--/row-->
