--- a/src/allmydata/web/welcome.xhtml
+++ b/src/allmydata/web/welcome.xhtml
@@ -160,25 +160,6 @@
             </div><!--/row-->
           </div>
           <div class="row-fluid">
-            <h2>Connected Introducer(s)</h2>
-          </div>
-          <div>
-          <table n:render="sequence" n:data="introducers">
-            <tr n:pattern="header">
-              <td>Introducer FURL</td>
-              <td>Connected?</td>
-            </tr>
-            <tr n:pattern="item" n:render="introducers_row">
-              <td><tt><n:slot name="introducer_furl"/></tt></td>
-              <td>
-                <n:slot name="connected"/>
-                <n:attr name="class">service-connected connected-<n:slot name="connected-bool"/></n:attr>
-              </td>
-            </tr>
-            <tr n:pattern="empty"><td>no introducers!</td></tr>
-          </table>
-          </div>
-          <div class="row-fluid">
             <h2>
               Connected to <span n:render="string" n:data="connected_storage_servers" />
               of <span n:render="string" n:data="known_storage_servers" /> known storage servers
@@ -187,10 +168,7 @@
           <table class="table table-striped table-bordered peer-status" n:render="sequence" n:data="services">
             <thead>
               <tr n:pattern="header">
-                <td><h3>Status</h3></td>
                 <td><h3>Nickname</h3></td>
-		<td><h3>Seed</h3></td>
-		<td><h3>FURL</h3></td>
                 <td><h3>Address</h3></td>
                 <td><h3>Last&nbsp;RX</h3></td>
                 <td><h3>Version</h3></td>
@@ -198,46 +176,18 @@
               </tr>
             </thead>
             <tr n:pattern="item" n:render="service_row">
-              <td class="service-connection-status">
-              <div><n:attr name="class">status-indicator service-<n:slot name="service_connection_status"/></n:attr></div>
-<div class="status-description"><n:slot name="service_connection_status"/><br/><a class="timestamp"><n:attr name="title"><n:slot name="service_connection_status_abs_time"/></n:attr><n:slot name="service_connection_status_rel_time"/></a></div></td>
               <td class="nickname-and-peerid">
                 <div class="status-indicator"><img><n:attr name="src">img/connected-<n:slot name="service_connection_status" />.png</n:attr><n:attr name="alt"><n:slot name="service_connection_status_alt" /></n:attr></img></div>
                 <a class="timestamp"><n:attr name="title"><n:slot name="service_connection_status_abs_time"/></n:attr><n:slot name="service_connection_status_rel_time"/></a>
                 <div class="nickname"><n:slot name="nickname"/></div>
                 <div class="nodeid"><n:slot name="peerid"/></div>
               </td>
-
-	      <td class="seed"><n:slot name="seed"/></td>
-	      <td class="furl"><n:slot name="furl"/></td>
-
               <td class="address"><n:slot name="address"/></td>
               <td class="service-last-received-data"><a class="timestamp"><n:attr name="title"><n:slot name="last_received_data_abs_time"/></n:attr><n:slot name="last_received_data_rel_time"/></a></td>
               <td class="service-version"><n:slot name="version"/></td>
               <td class="service-available-space"><n:slot name="available_space"/></td>
             </tr>
-            <tr n:pattern="empty"><td>You are not presently connected to any peers</td></tr>
-          </table>
-          <div class="row-fluid">
-            <h2>Connected to <span n:render="string" n:data="connected_introducers" /> of <span n:render="string" n:data="total_introducers" /> introducers</h2>
-          </div>
-          <table class="table table-striped table-bordered peer-status" n:render="sequence" n:data="introducers">
-            <thead>
-              <tr n:pattern="header">
-                <td><h3>Address</h3></td>
-                <td><h3>Since</h3></td>
-              </tr>
-            </thead>
-            <tr n:pattern="item" n:render="introducers_row">
-              <td class="nickname-and-peerid">
-                <div><n:attr name="class">status-indicator connected-<n:slot name="connected"/></n:attr></div>
-                <div class="furl"><n:slot name="introducer_furl"/></div>
-              </td>
-              <td class="service-since timestamp">
-                <n:slot name="since"/>
-              </td>
-            </tr>
-            <tr n:pattern="empty"><td>no introducers!</td></tr>
+            <tr n:pattern="empty"><td colspan="5">You are not presently connected to any peers</td></tr>
           </table>
           <div class="row-fluid">
             <h2>Connected to <span n:render="string" n:data="connected_introducers" /> of <span n:render="string" n:data="total_introducers" /> introducers</h2>
