welcome.xhtml: update copyright year
Not sure why we have this in there, but it might as well be current.

--- a/src/allmydata/web/welcome.xhtml
+++ b/src/allmydata/web/welcome.xhtml
@@ -228,7 +228,7 @@
       <hr/>
 
       <footer>
-        <p>&#169; <a href="https://tahoe-lafs.org/">Tahoe-LAFS Software Foundation 2013</a></p>
+        <p>&#169; <a href="https://tahoe-lafs.org/">Tahoe-LAFS Software Foundation 2013-2016</a></p>
         <p class="minutia">Page rendered at <span n:render="data" n:data="rendered_at" /></p>
         <p class="minutia" n:render="string" n:data="version"></p>
         <p class="minutia">Tahoe-LAFS code imported from: <span n:render="data" n:data="import_path" /></p>
