web/filenode: Split verifier functionality to a new module.
This commit includes the wiring up required to make most of the functionality
work.

--- a/src/allmydata/web/info.xhtml
+++ b/src/allmydata/web/info.xhtml
@@ -29,14 +29,18 @@
     </tr>
     </span>
 
+    <span n:render="is_mutable_file">
     <tr>
       <th>File writecap</th>
       <td><tt class="data-chars" n:render="file_writecap" /></td>
     </tr>
+    </span>
+    <span n:render="is_readable">
     <tr>
       <th>File readcap</th>
       <td><tt class="data-chars" n:render="file_readcap" /></td>
     </tr>
+    </span>
     <tr>
       <th>File verifycap</th>
       <td><tt class="data-chars" n:render="file_verifycap" /></td>
